Fix type in package.json concerning up and down arrows

--- a/package.json
+++ b/package.json
@@ -64,8 +64,8 @@
                 "enum": [
                   "arrow-l",
                   "arrow-r",
-                  "arrow-u",
-                  "arrow-d",
+                  "arrow-t",
+                  "arrow-b",
                   "delete",
                   "plus",
                   "minus",
