Fix for the phone marketing material

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
       {
         "devices": "phone",
         "startfile": "index.html",
-        "images": "smoothie(380-236)2.png"
+        "images": "marketing/smoothie(380-236)2.png"
       }
     ],
     "options": {
