Change parts of the app where the theme is applied (also, changing default theme)

--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
             "d",
             "e"
            ],
-          "default": "c",
+          "default": "a",
           "required": true
         },
         "tabs": {
