The css knows about new icons as well as the template configuration form

--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
                   "facebook",
                   "tag",
                   "pencil",
+                  "wrench",
                   "cart"
                 ]
               }
