Default tab name to datasource name

--- a/package.json
+++ b/package.json
@@ -151,7 +151,7 @@
                     {
                       "key": "tabs[].name",
                       "valueInLegend": true,
-                      "value": "Tab {{idx}}"
+                      "value": "{{values.datasources.main[]}}"
                     },
                     {
                       "title": "Tab data source",
