fix tizen mode in package.json

--- a/package.json
+++ b/package.json
@@ -142,7 +142,7 @@
           "title": "Enabled Tizen style",
           "default":true,
           "joshfire:definedFor": [
-            "phone-web"
+            "tizen-phone"
           ]
         }
       },
