--- a/package.json
+++ b/package.json
@@ -63,6 +63,21 @@
           "marketing/phone-5.png",
           "marketing/phone-6.png"
         ]
+      },
+      {
+        "devices": "phone-tizen",
+        "startfile": "index.html",
+        "orientation": "portrait",
+        "images": "marketing/smoothie(440-260).png",
+        "screenshots": [
+          "marketing/phone-1.png",
+          "marketing/phone-2.png",
+          "marketing/phone-3.png",
+          "marketing/phone-4.png",
+          "marketing/phone-5.png",
+          "marketing/phone-6.png"
+      }
+        ]
       }
     ],
     "options": {
@@ -142,7 +157,7 @@
           "title": "Enabled Tizen style",
           "default":true,
           "joshfire:definedFor": [
-            "tizen-phone"
+            "phone-tizen"
           ]
         }
       },
