--- a/package.json
+++ b/package.json
@@ -68,14 +68,13 @@
         "devices": "phone-tizen",
         "startfile": "index.html",
         "orientation": "portrait",
-        "images": "marketing/smoothie(440-260).png",
+        "images": "marketing/smoothie-tizen(440-260).png",
         "screenshots": [
-          "marketing/phone-1.png",
-          "marketing/phone-2.png",
-          "marketing/phone-3.png",
-          "marketing/phone-4.png",
-          "marketing/phone-5.png",
-          "marketing/phone-6.png"
+          "marketing/phone-tizen-1.png",
+          "marketing/phone-tizen-2.png",
+          "marketing/phone-tizen3.png",
+          "marketing/phone-tizen4.png",
+          "marketing/phone-tizen-5.png"
         ]
       }
     ],
